Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.2, 5.1.1, 5.2.1, 5.3.0, 5.3.1, 5.4.0
-
XCB (Fusion, GTK+ styles)
Description
If a QToolButton with a menu is set to auto-raise, then the button remains in the raised state after the menu has closed, even if the mouse is no longer over the button. If the mouse is then moved back over, and then away from the button, the raised state is removed.
Steps to reproduce with qtbug36862.zip:
- Click on button, choose "Action" from menu
- Hover state remains (expected: Hover is reset
- Click on button
- Click on button again to close menu: Works as expected, Hover is reset
- Run with -style windows: Works as expected, Hover is reset
Attachments
Issue Links
- is duplicated by
-
QTBUG-40233 QToolButton with a popup menu stays raised even after mouse leaves it on linux
-
- Closed
-
-
QTBUG-41780 QToolButton hovered rendering not cleared
-
- Closed
-
- relates to
-
QTBUG-36863 [REG] XCB, Mac OS: QToolButton menu not closed with click
-
- Closed
-
-
QTBUG-38021 QFrame does not emit leave event when opening dialog from mouseReleaseEvent() when used in popup (menu widget)
-
- Closed
-
-
QTBUG-41869 [REG 4.8.2->5.3.2] Mouse events are not generated (or processed) when clicking on a widget while a popup is open if said widget or one of its siblings uses OpenGL
-
- Closed
-